# projet-fingerprint-validator

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: constants.py  main.py  model.py  schema.py
deliverables/: Alyra Certification Meeting - Githubs.pages  Alyra Certification Meeting.pages  Alyra Checkpoint Meeting 16 March.pages  Laurent Chouraki - Livret d'apprentissage RNCP38616 Blocs 03 & 05.pages
frontend/: streamlit.py
full_logs/: end2end_fingerprint_classification_2_class.ipynb
notebooks/: .gitignore  construct_custom_dataset.ipynb  construct_dataset.ipynb  construct_datasets.ipynb  end2end_fingerprint_classification.ipynb  end2end_fingerprint_classification_efficientnet_with_clahe.ipynb  evaluate_mobilenet.ipynb  evaluate_mobilenet_custom.ipynb  fine_tuning_mobilenet.ipynb  fine_tuning_mobilenet_custom.ipynb  requirements.txt  sanitize_dataset.ipynb  transfer_learning.ipynb  transfer_learning_efficientnet.ipynb  transfer_learning_mobilenet.ipynb  transfer_learning_mobilenet_custom.ipynb  transfer_learning_mobilenet_custom_dataset.ipynb
notebooks/evaluation_logs/: evaluate_mobilenet_2_classes.ipynb  evaluate_mobilenet_3_classes.ipynb  evaluate_mobilenet_4_classes.ipynb  evaluate_mobilenet_5_classes.ipynb
notebooks/scratch/: construct_custom_dataset.ipynb  construct_custom_dataset_CLAHE.ipynb  construct_datasets.ipynb  construct_datasets_CLAHE.ipynb  end2end_fingerprint_classification_mobilenet_CLAHE_v2.ipynb  fine_tuning_mobilenet_3_classes.ipynb  fine_tuning_mobilenet_4_classes.ipynb  transfer_learning_efficientnet.ipynb  (+5 more)
(+15 files in other folders)
