[project]
name = "projet-fingerprint-validator"
version = "1.0.0"
description = "A simple AI application to predict fingerprint classification using Streamlit, FastAPI, TensorFlow/Keras pre-trained MobileNetV2 model."
authors = [
    {name = "Laurent Chouraki", email = "laurentchouraki@hotmail.fr"},
]
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "streamlit>=1.55.0",
    "fastapi[standard]>=0.135.2",
    "pydantic>=2.12.5",
    "tensorflow>=2.16.2",
    "keras>=3.13.2",
    "pillow>=12.1.1",
    "numpy>=1.26.4"
]

project-optional-dependencies = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["projet-fingerprint-validator/**"]
